Fixed blog-single alignment

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -899,3 +899,11 @@ blockquote cite {
 .panel-body{
     font-weight: 300;
 }
+
+
+@media(min-width: 630px) {
+    #overflow-container > .container {
+        width: 630;
+    }
+}
+
